<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecureGallery</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="registration">registration</string>
    <string name="space">" "</string>
    <string name="user_name_">"User Name: "</string>
    <string name="password_">"Password: "</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_secure_note">SecureNote</string>
    <string name="login_">"Login: "</string>
    <string name="enter">Enter</string>
    <string name="email_">"Email: "</string>
    <string name="title_activity_recover_pass">Recover Password</string>
    <string name="_send">Send</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="welcome">welcome</string>
    <string name="begin">begin</string>
    <string name="sign_in">sign in</string>
    <string name="sign_out">sign out</string>
    <string name="title_activity_file_picker">FilePicker</string>
    <string name="no_files">no files</string>
    <string name="no_skydrive_items">no skydrive items</string>
    <string name="skydrive_icon_description">skydrive icon description</string>
    <string name="title_activity_sky_drive">SkyDriveActivity</string>
    <string name="btnintend">btnIntend</string>
    <string name="btnintends">btnIntendS</string>
    <string name="btnintendv">btnIntendV</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Secure Gallery</string>
    <string name="registred_already">An user is registred already!</string>
    <string name="login">Login</string>
    <string name="already_registered">An user is already registered! Please press login</string>

</resources>