<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

  <ImageView 
      android:layout_height="wrap_content" 
      android:layout_width="wrap_content" 
      android:visibility="visible"
      android:id="@+id/imageView1" />    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:visibility="visible" />
    
    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:visibility="gone" />"
    
    </FrameLayout>
  
</LinearLayout>