 <FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

<TextView 
 android:text="@string/login" 
 android:id="@+id/TextView01" 
 android:layout_gravity="center_horizontal"
 android:layout_width="wrap_content" 
 android:layout_height="wrap_content"> 
 </TextView>
        
        
 <TextView 
 android:text="@string/user_name_"
 android:id="@+id/TextView01" 
 android:layout_width="fill_parent" 
 android:layout_height="wrap_content">
 </TextView>
 
 <EditText
     android:id="@+id/txtUsername"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:text="" >
 </EditText>
 
 <TextView 
 android:text="@string/password_"
 android:id="@+id/TextView01" 
 android:layout_width="fill_parent" 
 android:layout_height="wrap_content">
 </TextView>
 
 <EditText
     android:id="@+id/txtPassword"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:password="true"
     android:text="" >
 </EditText>   
 
  <Button
     android:id="@+id/btnLogin"
     android:text="@string/login"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     /> 
 </LinearLayout>
    
</FrameLayout>
 